                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-07-06
 * Allow qualifiers in Rest generate_relationship to be passed a comparison operator. 
 * wing.angular.js objectListManager on_each is now passed the objectManager instance of each object in addition to its properties.

2016-06-30
 * Updated the Facebook SSO API to work with Facebook's nonsense.
 * Exposed FacebookAuthUser role so you know what fields you have to add to auth with Facebook.
 * NOTE: You need to copy var/init/views/account/create_account_include.tt finish_facebook.tt, and authenticate_include.tt into your views/account folder.

2016-06-29
 * Added a describe_delete method.

2016-06-24
 * Replaced 451 error codes with the HTTP standard 401.

2016-06-22
 * Fixed a bug introduced in the last release where _include_options wasn't available on describe object calls.

2016-06-18
 * Added Wing::Role::Result::Cousin, which sets up many to many relationships between classes in a Wing way.
 * Added the Rest param _include and the method param include to describe() and format_list() in Wing::Dancer so that you can arbitrarily add stuff to class describe methods.
 * Documented the options in Wing::Rest for generate_relationship() and generate_all_relationships().
 * Fixed a bug relating to the object prefetch created by generate_relationship().
 * wing.angular.js objectListManager search() now has an on_success option that is passed the successful result set.

2016-06-16
 * Added privileged_params() to Wing::DB::Result.
 * Added check_privilege option to wing_field in Wing::Role::Result::Field.
 * The above two changes allow the creation of special privilege checks on a per-field basis. 

2016-06-11